fix: fix list interests test